[BUGFIX] solved missing background images, added serving dependencies, solved focus on some inputs

--- a/style.css
+++ b/style.css
@@ -106,6 +106,9 @@ dialog {
   grid-column:1/3;
 }
 
+input{
+  touch-action: none;
+}
 input[type=range]{
   accent-color:var(--button-and-border-ascent);
 }
